asteria/core/tests/errors/elaboration_errors/type_constructor_not_in_scope_hint_closest_type_constructors.asteriacore
data Bar (a : Type);;

data Fooo (a : Type);;

data Foo;;

x : Test$Fo()
  = x
  ;;
